# FiniteElementMethod_cpp

./: CMakeLists.txt  SOE.cpp  SOE.h  main.cpp
headers/: Element.h  GaussLegendre.h  GlobalData.h  Grid.h  Matrix.h  Node.h  Parser.h  SOE.h  ShapeFunction.h  Surface.h  UniversalElement.h
src/: Element.cpp  GaussLegendre.cpp  GlobalData.cpp  Grid.cpp  Node.cpp  Parser.cpp  SOE.cpp  ShapeFunction.cpp  Surface.cpp  UniversalElement.cpp  main.cpp
vtk/mixgrid/: mixgrid_0.vtk  mixgrid_1.vtk  mixgrid_10.vtk  mixgrid_2.vtk  mixgrid_3.vtk  mixgrid_4.vtk  mixgrid_5.vtk  mixgrid_6.vtk  mixgrid_7.vtk  mixgrid_8.vtk  mixgrid_9.vtk
vtk/presentation/: presentation_0.vtk  presentation_1.vtk  presentation_10.vtk  presentation_100.vtk  presentation_101.vtk  presentation_102.vtk  presentation_103.vtk  presentation_104.vtk  presentation_105.vtk  presentation_106.vtk  presentation_107.vtk  presentation_108.vtk  presentation_109.vtk  presentation_11.vtk  presentation_110.vtk  presentation_111.vtk  presentation_112.vtk  presentation_113.vtk  presentation_114.vtk  presentation_115.vtk  presentation_116.vtk  presentation_117.vtk  presentation_118.vtk  presentation_119.vtk  presentation_12.vtk  presentation_120.vtk  presentation_121.vtk  presentation_122.vtk  presentation_123.vtk  presentation_124.vtk  presentation_125.vtk  presentation_126.vtk  presentation_127.vtk  presentation_128.vtk  presentation_129.vtk  presentation_13.vtk  presentation_130.vtk  presentation_131.vtk  presentation_132.vtk  presentation_133.vtk  (+201 more)
vtk/simple/: simple_0.vtk  simple_1.vtk  simple_10.vtk  simple_2.vtk  (+7 more)
(+20 files in other folders)
